Add examples for utilities

--- a/examples/index.html
+++ b/examples/index.html
@@ -50,6 +50,35 @@
             <li>Item 3</li>
         </ul>
 
+        <h2>Utilities</h2>
+        <p>
+            The framework comes with some handy classes :
+        </p>
+        <h3>text-center</h3>
+        <p class="text-center">
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores dignissimos hic iste iusto modi mollitia nisi obcaecati quia sint. Excepturi fugit itaque laboriosam mollitia quae quisquam reiciendis tempora, tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, iste, voluptas. Asperiores aspernatur corporis dolor earum eligendi error, et obcaecati. Assumenda beatae dolorum enim fugiat libero minima sint unde vel. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, alias aliquam assumenda blanditiis dicta fugiat illo impedit iste libero mollitia, officia praesentium reiciendis rem. A accusantium ducimus enim maiores saepe.
+        </p>
+        <h3>text-right</h3>
+        <p class="text-right">
+            <code>text-right</code> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores dignissimos hic iste iusto modi mollitia nisi obcaecati quia sint. Excepturi fugit itaque laboriosam mollitia quae quisquam reiciendis tempora, tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, iste, voluptas. Asperiores aspernatur corporis dolor earum eligendi error, et obcaecati. Assumenda beatae dolorum enim fugiat libero minima sint unde vel. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, alias aliquam assumenda blanditiis dicta fugiat illo impedit iste libero mollitia, officia praesentium reiciendis rem. A accusantium ducimus enim maiores saepe.
+        </p>
+        <h3>text-justify</h3>
+        <p class="text-justify">
+            <code>text-justify</code> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores dignissimos hic iste iusto modi mollitia nisi obcaecati quia sint. Excepturi fugit itaque laboriosam mollitia quae quisquam reiciendis tempora, tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, iste, voluptas. Asperiores aspernatur corporis dolor earum eligendi error, et obcaecati. Assumenda beatae dolorum enim fugiat libero minima sint unde vel. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, alias aliquam assumenda blanditiis dicta fugiat illo impedit iste libero mollitia, officia praesentium reiciendis rem. A accusantium ducimus enim maiores saepe.
+        </p>
+        <h3>font-light</h3>
+        <p class="font-light">
+            <code>font-light</code> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores dignissimos hic iste iusto modi mollitia nisi obcaecati quia sint. Excepturi fugit itaque laboriosam mollitia quae quisquam reiciendis tempora, tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, iste, voluptas. Asperiores aspernatur corporis dolor earum eligendi error, et obcaecati. Assumenda beatae dolorum enim fugiat libero minima sint unde vel. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, alias aliquam assumenda blanditiis dicta fugiat illo impedit iste libero mollitia, officia praesentium reiciendis rem. A accusantium ducimus enim maiores saepe.
+        </p>
+        <h3>font-normal</h3>
+        <p class="font-normal">
+            <code>font-normal</code> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores dignissimos hic iste iusto modi mollitia nisi obcaecati quia sint. Excepturi fugit itaque laboriosam mollitia quae quisquam reiciendis tempora, tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, iste, voluptas. Asperiores aspernatur corporis dolor earum eligendi error, et obcaecati. Assumenda beatae dolorum enim fugiat libero minima sint unde vel. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, alias aliquam assumenda blanditiis dicta fugiat illo impedit iste libero mollitia, officia praesentium reiciendis rem. A accusantium ducimus enim maiores saepe.
+        </p>
+        <h3>font-bold</h3>
+        <p class="font-bold">
+            <code>font-bold</code> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores dignissimos hic iste iusto modi mollitia nisi obcaecati quia sint. Excepturi fugit itaque laboriosam mollitia quae quisquam reiciendis tempora, tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, iste, voluptas. Asperiores aspernatur corporis dolor earum eligendi error, et obcaecati. Assumenda beatae dolorum enim fugiat libero minima sint unde vel. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, alias aliquam assumenda blanditiis dicta fugiat illo impedit iste libero mollitia, officia praesentium reiciendis rem. A accusantium ducimus enim maiores saepe.
+        </p>
+
     </div>
 </div>
 </body>
