Add grid examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <title>Index of examples</title>
     <link rel="stylesheet" href="../potato.css">
+    <style>
+        .red {
+            background-color: indianred;
+        }
+        .blue {
+            background-color: cornflowerblue;
+        }
+        .green {
+            background-color: green;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
@@ -78,6 +89,163 @@
         <p class="font-bold">
             <code>font-bold</code> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores dignissimos hic iste iusto modi mollitia nisi obcaecati quia sint. Excepturi fugit itaque laboriosam mollitia quae quisquam reiciendis tempora, tenetur. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, iste, voluptas. Asperiores aspernatur corporis dolor earum eligendi error, et obcaecati. Assumenda beatae dolorum enim fugiat libero minima sint unde vel. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, alias aliquam assumenda blanditiis dicta fugiat illo impedit iste libero mollitia, officia praesentium reiciendis rem. A accusantium ducimus enim maiores saepe.
         </p>
+
+        <h2>Grid system</h2>
+        <p>
+            The grid system is similar to Bootstrap's. It comes with 12 columns (potatoes) for a row.
+        </p>
+        <h3>Different "sizes"</h3>
+        <h4>*-small category</h4>
+        <div class="row green">
+            <div class="one-small potato red">
+                <p>C</p>
+            </div>
+            <div class="one-small potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-small potato red">
+                <p>C</p>
+            </div>
+            <div class="one-small potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-small potato red">
+                <p>C</p>
+            </div>
+            <div class="one-small potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-small potato red">
+                <p>C</p>
+            </div>
+            <div class="one-small potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-small potato red">
+                <p>C</p>
+            </div>
+            <div class="one-small potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-small potato red">
+                <p>C</p>
+            </div>
+            <div class="one-small potato blue">
+                <p>C</p>
+            </div>
+        </div>
+
+        <h4>*-medium category</h4>
+        <div class="row green">
+            <div class="one-medium potato red">
+                <p>C</p>
+            </div>
+            <div class="one-medium potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-medium potato red">
+                <p>C</p>
+            </div>
+            <div class="one-medium potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-medium potato red">
+                <p>C</p>
+            </div>
+            <div class="one-medium potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-medium potato red">
+                <p>C</p>
+            </div>
+            <div class="one-medium potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-medium potato red">
+                <p>C</p>
+            </div>
+            <div class="one-medium potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-medium potato red">
+                <p>C</p>
+            </div>
+            <div class="one-medium potato blue">
+                <p>C</p>
+            </div>
+        </div>
+
+        <h4>*-large category</h4>
+        <div class="row green">
+            <div class="one-large potato red">
+                <p>C</p>
+            </div>
+            <div class="one-large potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-large potato red">
+                <p>C</p>
+            </div>
+            <div class="one-large potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-large potato red">
+                <p>C</p>
+            </div>
+            <div class="one-large potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-large potato red">
+                <p>C</p>
+            </div>
+            <div class="one-large potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-large potato red">
+                <p>C</p>
+            </div>
+            <div class="one-large potato blue">
+                <p>C</p>
+            </div>
+            <div class="one-large potato red">
+                <p>C</p>
+            </div>
+            <div class="one-large potato blue">
+                <p>C</p>
+            </div>
+        </div>
+
+
+        <h3>Combine</h3>
+        <p>
+            You can combine all the sizes in a single row. The only condition is that the sum should be 12.
+        </p>
+        <div class="row green">
+            <div class="two-medium potatoes red">
+                <p>.two-medium</p>
+            </div>
+            <div class="six-medium potatoes blue">
+                <p>.six-medium</p>
+            </div>
+            <div class="four-medium potatoes red">
+                <p>.four-medium</p>
+            </div>
+        </div>
+
+        <div class="row green">
+            <div class="three-medium potatoes red">
+                <p>.three-medium</p>
+            </div>
+            <div class="nine-medium potatoes blue">
+                <p>.nine-medium</p>
+            </div>
+        </div>
+
+        <div class="row green">
+            <div class="twelve-medium potatoes red">
+                <p>.twelve-medium</p>
+            </div>
+        </div>
 
     </div>
 </div>
