Add color explanation

--- a/examples/index.html
+++ b/examples/index.html
@@ -92,7 +92,7 @@
 
         <h2>Grid system</h2>
         <p>
-            The grid system is similar to Bootstrap's. It comes with 12 columns (potatoes) for a row.
+            The grid system is similar to Bootstrap's. It comes with 12 columns (potatoes) for a row. In the following examples, the <code>row</code> will be in green, and the <code>potatoes</code> in red and blue.
         </p>
         <h3>Different "sizes"</h3>
         <h4>*-small category</h4>
