Add list alpha example

--- a/examples/index.html
+++ b/examples/index.html
@@ -60,6 +60,14 @@
             <li>Item 2</li>
             <li>Item 3</li>
         </ul>
+        <p>
+            With <code>l-alpha-item</code> :
+        </p>
+        <ul class="l-alpha-item">
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ul>
 
         <h2>Utilities</h2>
         <p>
