--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Index of examples</title>
+    <title>Examples</title>
     <link rel="stylesheet" href="../potato.css">
     <style>
         .red {
