Add blog example

--- a/examples/index.html
+++ b/examples/index.html
@@ -21,8 +21,11 @@
     <div class="row">
         <h1>Examples</h1>
         <p>
-            This page lists some examples of what you can do with PotatoCSS.
+            This page lists some examples of what you can do with PotatoCSS. More realistic pages are available here :
         </p>
+        <ul>
+            <li><a href="./blog.html">Blog example</a></li>
+        </ul>
 
         <h2>Titles</h2>
         <h1>h1 title</h1>
