Add thumbnails gallery example

--- a/examples/index.html
+++ b/examples/index.html
@@ -25,6 +25,7 @@
         </p>
         <ul>
             <li><a href="./blog.html">Blog example</a></li>
+            <li><a href="./gallery.html">Pictures gallery example</a></li>
         </ul>
 
         <h2>Titles</h2>
