--- a/examples/lists.html
+++ b/examples/lists.html
@@ -1,81 +1,91 @@
-<div id="lists-example">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Lists</title>
+    <link rel="stylesheet" href="../potato.css">
+  </head>
+  <body>
+    <div id="lists-example">
 
-    <div class="row">
-        <div class="twelve-large potatoes">
-            <h1 class="font-bold">Lists</h1>
+        <div class="row">
+            <div class="twelve-large potatoes">
+                <h1 class="font-bold">Lists</h1>
+            </div>
         </div>
+
+        <div class="row">
+            <div class="four-large potatoes">
+                <ol>
+                    <li>Pumpkin Spice Latte</li>
+                    <li>Green Tea Latte</li>
+                    <li>Youthberry Tea</li>
+                    <li>Citrus Mint Green Tea Latte</li>
+                    <li>Pumpkin Spice Frappuccino</li>
+                    <li>Jasmine Pearls</li>
+                    <li>Berry Smoothie</li>
+                </ol>
+            </div>
+            <div class="four-large potatoes">
+                <ul>
+                    <li>Pumpkin Spice Latte</li>
+                    <li>Green Tea Latte</li>
+                    <li>Youthberry Tea</li>
+                    <li>Citrus Mint Green Tea Latte</li>
+                    <li>Pumpkin Spice Frappuccino</li>
+                    <li>Jasmine Pearls</li>
+                    <li>Berry Smoothie</li>
+                </ul>
+            </div>
+            <div class="four-large potatoes">
+                <ol class="circle-potato">
+                    <li>Pumpkin Spice Latte</li>
+                    <li>Green Tea Latte</li>
+                    <li>Youthberry Tea</li>
+                    <li>Citrus Mint Green Tea Latte</li>
+                    <li>Pumpkin Spice Frappuccino</li>
+                    <li>Jasmine Pearls</li>
+                    <li>Berry Smoothie</li>
+                </ol>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="four-large potatoes">
+                <ul class="alpha-potato">
+                    <li>Pumpkin Spice Latte</li>
+                    <li>Green Tea Latte</li>
+                    <li>Youthberry Tea</li>
+                    <li>Citrus Mint Green Tea Latte</li>
+                    <li>Pumpkin Spice Frappuccino</li>
+                    <li>Jasmine Pearls</li>
+                    <li>Berry Smoothie</li>
+                </ul>
+            </div>
+            <div class="four-large potatoes">
+                <ol class="roman-potato">
+                    <li>Pumpkin Spice Latte</li>
+                    <li>Green Tea Latte</li>
+                    <li>Youthberry Tea</li>
+                    <li>Citrus Mint Green Tea Latte</li>
+                    <li>Pumpkin Spice Frappuccino</li>
+                    <li>Jasmine Pearls</li>
+                    <li>Berry Smoothie</li>
+                </ol>
+            </div>
+            <div class="four-large potatoes">
+                <ul class="square-potato">
+                    <li>Pumpkin Spice Latte</li>
+                    <li>Green Tea Latte</li>
+                    <li>Youthberry Tea</li>
+                    <li>Citrus Mint Green Tea Latte</li>
+                    <li>Pumpkin Spice Frappuccino</li>
+                    <li>Jasmine Pearls</li>
+                    <li>Berry Smoothie</li>
+                </ul>
+            </div>
+        </div>
+
     </div>
-
-    <div class="row">
-        <div class="four-large potatoes">
-            <ol>
-                <li>Pumpkin Spice Latte</li>
-                <li>Green Tea Latte</li>
-                <li>Youthberry Tea</li>
-                <li>Citrus Mint Green Tea Latte</li>
-                <li>Pumpkin Spice Frappuccino</li>
-                <li>Jasmine Pearls</li>
-                <li>Berry Smoothie</li>
-            </ol>
-        </div>
-        <div class="four-large potatoes">
-            <ul>
-                <li>Pumpkin Spice Latte</li>
-                <li>Green Tea Latte</li>
-                <li>Youthberry Tea</li>
-                <li>Citrus Mint Green Tea Latte</li>
-                <li>Pumpkin Spice Frappuccino</li>
-                <li>Jasmine Pearls</li>
-                <li>Berry Smoothie</li>
-            </ul>
-        </div>
-        <div class="four-large potatoes">
-            <ol class="circle-potato">
-                <li>Pumpkin Spice Latte</li>
-                <li>Green Tea Latte</li>
-                <li>Youthberry Tea</li>
-                <li>Citrus Mint Green Tea Latte</li>
-                <li>Pumpkin Spice Frappuccino</li>
-                <li>Jasmine Pearls</li>
-                <li>Berry Smoothie</li>
-            </ol>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="four-large potatoes">
-            <ul class="alpha-potato">
-                <li>Pumpkin Spice Latte</li>
-                <li>Green Tea Latte</li>
-                <li>Youthberry Tea</li>
-                <li>Citrus Mint Green Tea Latte</li>
-                <li>Pumpkin Spice Frappuccino</li>
-                <li>Jasmine Pearls</li>
-                <li>Berry Smoothie</li>
-            </ul>
-        </div>
-        <div class="four-large potatoes">
-            <ol class="roman-potato">
-                <li>Pumpkin Spice Latte</li>
-                <li>Green Tea Latte</li>
-                <li>Youthberry Tea</li>
-                <li>Citrus Mint Green Tea Latte</li>
-                <li>Pumpkin Spice Frappuccino</li>
-                <li>Jasmine Pearls</li>
-                <li>Berry Smoothie</li>
-            </ol>
-        </div>
-        <div class="four-large potatoes">
-            <ul class="square-potato">
-                <li>Pumpkin Spice Latte</li>
-                <li>Green Tea Latte</li>
-                <li>Youthberry Tea</li>
-                <li>Citrus Mint Green Tea Latte</li>
-                <li>Pumpkin Spice Frappuccino</li>
-                <li>Jasmine Pearls</li>
-                <li>Berry Smoothie</li>
-            </ul>
-        </div>
-    </div>
-
-</div>
+  </body>
+</html>
