--- a/examples/typography.html
+++ b/examples/typography.html
@@ -1,18 +1,28 @@
-<div id="typography-example">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Typography</title>
+    <link rel="stylesheet" href="../potato.css">
+  </head>
+  <body>
+    <div id="typography-example">
 
-    <div class="row">
-        <div class="twelve-large potatoes">
+        <div class="row">
+            <div class="twelve-large potatoes">
 
-            <h1 class="font-bold">Typography</h1>
+                <h1 class="font-bold">Typography</h1>
 
-            <h1>h1. All their equipment and instruments are alive.</h1>
-            <h2>h2. A red flair silhouetted the jagged edge of a wing.</h2>
-            <h3>h3. I watched the storm, so beautiful yet terrific.</h3>
-            <h4>h4. Almost before we knew it, we had left the ground.</h4>
-            <h5>h5. A shining crescent far beneath the flying vessel.</h5>
-            <h6>h6. She stared through the window at the stars.</h6>
+                <h1>h1. All their equipment and instruments are alive.</h1>
+                <h2>h2. A red flair silhouetted the jagged edge of a wing.</h2>
+                <h3>h3. I watched the storm, so beautiful yet terrific.</h3>
+                <h4>h4. Almost before we knew it, we had left the ground.</h4>
+                <h5>h5. A shining crescent far beneath the flying vessel.</h5>
+                <h6>h6. She stared through the window at the stars.</h6>
 
+            </div>
         </div>
-    </div>
 
-</div>
+    </div>
+  </body>
+</html>
