removed examples white space and added form example

--- a/examples/grid.html
+++ b/examples/grid.html
@@ -1,11 +1,9 @@
-<div class="grid-example">
-
+<div id="grid-example">
     <div class="row">
         <div class="twelve-large potatoes">
             <p>twelve large potatoes</p>
         </div>
     </div>
-
     <div class="row">
         <div class="one-large potatoes">
             <p>one</p>
@@ -14,7 +12,6 @@
             <p>eleven</p>
         </div>
     </div>
-
     <div class="row">
         <div class="two-large potatoes">
             <p>two</p>
@@ -23,7 +20,6 @@
             <p>ten</p>
         </div>
     </div>
-
     <div class="row">
         <div class="three-large potatoes">
             <p>three</p>
@@ -32,7 +28,6 @@
             <p>nine</p>
         </div>
     </div>
-
     <div class="row">
         <div class="four-large potatoes">
             <p>four</p>
@@ -41,7 +36,6 @@
             <p>eight</p>
         </div>
     </div>
-
     <div class="row">
         <div class="five-large potatoes">
             <p>five</p>
@@ -50,7 +44,6 @@
             <p>seven</p>
         </div>
     </div>
-
     <div class="row">
         <div class="six-large potatoes">
             <p>six</p>
@@ -59,7 +52,6 @@
             <p>six</p>
         </div>
     </div>
-
     <div class="row">
         <div class="seven-large potatoes">
             <p>seven</p>
@@ -68,7 +60,6 @@
             <p>five</p>
         </div>
     </div>
-
     <div class="row">
         <div class="eight-large potatoes">
             <p>eight</p>
@@ -77,7 +68,6 @@
             <p>four</p>
         </div>
     </div>
-
     <div class="row">
         <div class="nine-large potatoes">
             <p>nine</p>
@@ -86,7 +76,6 @@
             <p>three</p>
         </div>
     </div>
-
     <div class="row">
         <div class="ten-large potatoes">
             <p>ten</p>
@@ -95,7 +84,6 @@
             <p>two</p>
         </div>
     </div>
-
     <div class="row">
         <div class="eleven-large potatoes">
             <p>eleven</p>
@@ -104,11 +92,9 @@
             <p>one</p>
         </div>
     </div>
-
     <div class="row">
         <div class="twelve-large potatoes">
             <p>twelve</p>
         </div>
     </div>
-
 </div>
