--- a/examples/buttons.html
+++ b/examples/buttons.html
@@ -1,25 +1,31 @@
-<div id="buttons-example">
-    <div class="row">
-        <div class="twelve-large potatoes">
-            <h1 class="font-bold">Buttons</h1>
-            <p>Default button classes</p>
-            <a href="#" class="button">Default</a>
-            <a href="#" class="button success">Success</a>
-            <a href="#" class="button warning">Warning</a>
-            <a href="#" class="button danger">Danger</a>
-        </div>
+<div class="row">
+    <div class="twelve-large potatoes">
+        <h1 class="font-bold">Buttons</h1>
+        <p>Default button classes</p>
+        <a href="#" class="button">Default</a>
+        <a href="#" class="button primary">Primary</a>
+        <a href="#" class="button success">Success</a>
+        <a href="#" class="button warning">Warning</a>
+        <a href="#" class="button danger">Danger</a>
     </div>
-    <div class="row">
-        <div class="six-large potatoes">
-            <p>Button sizing</p>
-            <a href="#" class="button small">Small</a>
-            <a href="#" class="button">Default</a>
-            <a href="#" class="button large">Large</a>
-        </div>
-        <div class="six-large potatoes">
-            <p>Button expanded</p>
-            <a href="#" class="button expanded">Expanded</a>
-            <a href="#" class="button success expanded">Expanded</a>
-        </div>
+    <div class="twelve-large potatoes">
+        <a href="#" class="button-full">Default</a>
+        <a href="#" class="button-full primary">Primary</a>
+        <a href="#" class="button-full success">Success</a>
+        <a href="#" class="button-full warning">Warning</a>
+        <a href="#" class="button-full danger">Danger</a>
+    </div>
+</div>
+<div class="row">
+    <div class="six-large potatoes">
+        <p>Button sizing</p>
+        <a href="#" class="button small">Small</a>
+        <a href="#" class="button">Default</a>
+        <a href="#" class="button large">Large</a>
+    </div>
+    <div class="six-large potatoes">
+        <p>Button expanded</p>
+        <a href="#" class="button expanded">Expanded</a>
+        <a href="#" class="button success expanded">Expanded</a>
     </div>
 </div>
