:fire: Buttons example update

--- a/examples/buttons.html
+++ b/examples/buttons.html
@@ -9,19 +9,26 @@
         <a href="#" class="button danger">Danger</a>
     </div>
     <div class="twelve-large potatoes">
-        <a href="#" class="button-full">Default</a>
-        <a href="#" class="button-full primary">Primary</a>
-        <a href="#" class="button-full success">Success</a>
-        <a href="#" class="button-full warning">Warning</a>
-        <a href="#" class="button-full danger">Danger</a>
+        <a href="#" class="button full">Default</a>
+        <a href="#" class="button full primary">Primary</a>
+        <a href="#" class="button full success">Success</a>
+        <a href="#" class="button full warning">Warning</a>
+        <a href="#" class="button full danger">Danger</a>
     </div>
 </div>
 <div class="row">
     <div class="six-large potatoes">
         <p>Button sizing</p>
-        <a href="#" class="button small">Small</a>
-        <a href="#" class="button">Default</a>
-        <a href="#" class="button large">Large</a>
+        <div>
+            <a href="#" class="button small">Small</a>
+            <a href="#" class="button">Default</a>
+            <a href="#" class="button large">Large</a>
+        </div>
+        <div>
+            <a href="#" class="button full large success">Large</a>
+            <a href="#" class="button full primary">Default</a>
+            <a href="#" class="button full small danger">Small</a>
+        </div>
     </div>
     <div class="six-large potatoes">
         <p>Button expanded</p>
