--- a/examples/buttons.html
+++ b/examples/buttons.html
@@ -1,5 +1,6 @@
-<div class="row">
-    <div class="twelve-large potatoes">
+<div id="button-example">
+  <div class="row">
+      <div class="twelve-large potatoes">
         <h1 class="font-bold">Buttons</h1>
         <p>Default button classes</p>
         <a href="#" class="button">Default</a>
@@ -7,32 +8,33 @@
         <a href="#" class="button success">Success</a>
         <a href="#" class="button warning">Warning</a>
         <a href="#" class="button danger">Danger</a>
-    </div>
-    <div class="twelve-large potatoes">
+      </div>
+      <div class="twelve-large potatoes">
         <a href="#" class="button full">Default</a>
         <a href="#" class="button full primary">Primary</a>
         <a href="#" class="button full success">Success</a>
         <a href="#" class="button full warning">Warning</a>
         <a href="#" class="button full danger">Danger</a>
-    </div>
-</div>
-<div class="row">
+      </div>
+  </div>
+  <div class="row">
     <div class="six-large potatoes">
-        <p>Button sizing</p>
-        <div>
-            <a href="#" class="button small">Small</a>
-            <a href="#" class="button">Default</a>
-            <a href="#" class="button large">Large</a>
-        </div>
-        <div>
-            <a href="#" class="button full large success">Large</a>
-            <a href="#" class="button full primary">Default</a>
-            <a href="#" class="button full small danger">Small</a>
-        </div>
+      <p>Button sizing</p>
+      <div>
+        <a href="#" class="button small">Small</a>
+        <a href="#" class="button">Default</a>
+        <a href="#" class="button large">Large</a>
+      </div>
+      <div>
+        <a href="#" class="button full large success">Large</a>
+        <a href="#" class="button full primary">Default</a>
+        <a href="#" class="button full small danger">Small</a>
+      </div>
     </div>
     <div class="six-large potatoes">
-        <p>Button expanded</p>
-        <a href="#" class="button expanded">Expanded</a>
-        <a href="#" class="button success expanded">Expanded</a>
+      <p>Button expanded</p>
+      <a href="#" class="button expanded">Expanded</a>
+      <a href="#" class="button success expanded">Expanded</a>
     </div>
+  </div>
 </div>
