--- a/examples/lists.html
+++ b/examples/lists.html
@@ -1,4 +1,4 @@
-<div id="lists-example">
+<div id="list-example">
     <div class="row">
         <div class="twelve-large potatoes">
             <h1 class="font-bold">Lists</h1>
