Added image thumbnails
Added image thumbnails, made css and less files for when it is
configured properly

--- a/examples/index.html
+++ b/examples/index.html
@@ -55,7 +55,7 @@
     <div id="header">
       <div class="row">
         <div class="text-center twelve-large potatoes">
-          <img src="logo.png" />
+          <img src="./assets/logo.png" />
           <h1>PotatoCSS</h1>
           <h3>Simple CSS framework for hackers. Simple as potato.</h3>
         </div>
@@ -82,6 +82,7 @@
             <li><a href="#code">Code</a></li>
             <li><a href="#labels">Labels</a></li>
             <li><a href="#panels">Panels</a></li>
+            <li><a href="#images">Images</a></li>
           </ul>
         </div>
       </div>
@@ -564,6 +565,26 @@
               Aliquam erat volutpat. Duis euismod aliquam mi at faucibus. Donec interdum pulvinar eros. Morbi vitae maximus urna, vel faucibus leo. Vivamus vitae leo porttitor, tincidunt lectus ac, tempor lectus. Ut.
             </p>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div id="images">
+      <div class="row">
+        <div class="twelve-large potatoes">
+          <h1>Images</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="six-large potatoes">
+          <p>Image thumbnail</p>
+          <img src="./assets/image-example.jpg" class="img-thumb" alt="Image example"/>
+        </div>
+        <div class="six-large potatoes">
+          <p>Image thumbnail rounded</p>
+          <img src="./assets/image-example.jpg" class="img-thumb round"  alt="Image example"/>
         </div>
       </div>
     </div>
