Move changes to SCSS version

--- a/examples/index.html
+++ b/examples/index.html
@@ -532,7 +532,7 @@
           <li>
             <span class="label danger">Danger</span>
           </li>
-        <ul>
+        </ul>
       </div>
     </div>
 
@@ -578,6 +578,6 @@
     </div>
 
   </div>
-
+</div>
 </body>
 </html>
